Debug build fix
        * Drosera/win/Drosera.vcproj/Drosera.vcproj: Added a Debug_Internal
        configuration.
        * Drosera/win/Drosera.vcproj/debug.vsprops: Updated to match other
        projects.
        * Drosera/win/Drosera.vcproj/release.vsprops: Ditto.
        * Drosera/win/Drosera.vcproj/debug_internal.vsprops: Copied from
        WebKitTools/DumpRenderTree/win/debug_internal.vsprops.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28252 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-30  Adam Roben  <aroben@apple.com>
+
+        Debug build fix
+
+        * Drosera/win/Drosera.vcproj/Drosera.vcproj: Added a Debug_Internal
+        configuration.
+        * Drosera/win/Drosera.vcproj/debug.vsprops: Updated to match other
+        projects.
+        * Drosera/win/Drosera.vcproj/release.vsprops: Ditto.
+        * Drosera/win/Drosera.vcproj/debug_internal.vsprops: Copied from
+        WebKitTools/DumpRenderTree/win/debug_internal.vsprops.
+
 2007-11-30  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Adam Roben.
