Hopefully the final build fix
        * Drosera/win/Drosera.vcproj/Drosera.vcproj: Link against WTF.lib to
        pull in WTF's assertion/logging functions.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28254 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-30  Adam Roben  <aroben@apple.com>
 
+        Hopefully the final build fix
+
+        * Drosera/win/Drosera.vcproj/Drosera.vcproj: Link against WTF.lib to
+        pull in WTF's assertion/logging functions.
+
+2007-11-30  Adam Roben  <aroben@apple.com>
+
         Another build fix
 
         * Drosera/win/Drosera.vcproj/Drosera.vcproj: Use the right suffix for
