wx build fix. Add WebCore/platform/graphics/wx to includes.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28257 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/wx/ChangeLog
+++ b/WebKit/wx/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
 
+        wx build fix. Add WebCore/platform/graphics/wx to includes.
+
+        * wxwebkit.bkl:
+
+2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
+
         Fix method signatures to be members of ClientChromeWx class.
 
         * WebKitSupport/ChromeClientWx.cpp:
