--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx build fix. Add WebCore/platform/graphics/wx to includes.
+
+        * webcore-wx.bkl:
+
 2007-11-30  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Geoff
