Not reviewed. Try to fix qt/gtk build.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28259 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-30  Nikolas Zimmermann  <zimmermann@kde.org>
 
+        Not reviewed. Try to fix qt/gtk build.
+
+        * WebCore.pro:
+
+2007-11-30  Nikolas Zimmermann  <zimmermann@kde.org>
+
         Rubber stamped by Eric.
 
         Final integration of ksvg2 in WebKit. Moving ksvg2/ to svg/ and killing all it's subdirectories,
