--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-30   Anders Carlsson  <andersca@apple.com>
+
+        Remove extra </Filter> tag which prevented the vcproj from being parsed correctly.
+        
+        * WebCore.vcproj/WebCore.vcproj:
+
 2007-11-30  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Not reviewed. Try to fix qt/gtk build.
