Add platform/text project group.
        * WebCore.vcproj/WebCore.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28264 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-30   Anders Carlsson  <andersca@apple.com>
 
+        Add platform/text project group.
+        
+        * WebCore.vcproj/WebCore.vcproj:
+
+2007-11-30   Anders Carlsson  <andersca@apple.com>
+
         Remove extra </Filter> tag which prevented the vcproj from being parsed correctly.
         
         * WebCore.vcproj/WebCore.vcproj:
