--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-30  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Bertrand.
+        
+        New commit and review policy.
+
+        * coding/commit-review-policy.html: Added.
+
 2007-11-21  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Eric.
