--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-30  Matt Lilek  <webkit@mattlilek.com>
+
+        Reviewed by Adam.
+
+        Link to the commit and review policy.
+
+        * coding/contributing.html:
+        * nav.inc:
+
 2007-11-30  Darin Adler  <darin@apple.com>
 
         * coding/commit-review-policy.html: A couple more typos and very
