Add a simple script to update the site
        * update.pl: Added.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28277 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/ChangeLog
+++ b/PlanetWebKit/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-30  Adam Roben  <aroben@apple.com>
 
+        Add a simple script to update the site
+
+        * update.pl: Added.
+
+2007-11-30  Adam Roben  <aroben@apple.com>
+
         Include all WebKit posts from Trolltech Labs
 
         * config.ini:
